--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
@@ -24,13 +23,18 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "preinstall": "npx npm-force-resolutions"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
+  },
+  "resolutions": {
+    "**/css-select": "^4.1.3",
+    "**/nth-check": "^1.0.2"
   },
   "browserslist": {
     "production": [
@@ -45,8 +49,10 @@
     ]
   },
   "devDependencies": {
+    "@svgr/webpack": "^7.0.0",
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
+    "react-scripts": "^5.0.1",
     "tailwindcss": "^3.1.8"
   }
 }
