--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "meme-generator",
+  "name": "portfolio-website",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -23,18 +23,13 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "preinstall": "npx npm-force-resolutions"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
     ]
-  },
-  "resolutions": {
-    "**/css-select": "^4.1.3",
-    "**/nth-check": "^1.0.2"
   },
   "browserslist": {
     "production": [
