--- a/package.json
+++ b/package.json
@@ -46,8 +46,6 @@
   "devDependencies": {
     "@svgr/webpack": "^7.0.0",
     "autoprefixer": "^10.4.8",
-    "postcss": "^8.4.16",
-    "react-scripts": "^5.0.1",
-    "tailwindcss": "^3.1.8"
+    "react-scripts": "^5.0.1"
   }
 }
